Version ?
--------------

  feature
   - support of LLEXT in Zephyr
   - support of Mbedtls for RPC
   - support of TLS or mTLS for RPC
   - allow global setting of TLS material

  fix
   - correctly handle NULL listener in afb-stub-rpc
   - handle correctly concurrent accesses in afb-stub-rpc

Version 5.3.10
--------------

  fix
   - fix includes of libafb-config.h in libafbcli

Version 5.3.9
-------------

  fix
   - fix include of afb-vcomm

Version 5.3.8
-------------

  change
   - make timerfd as optional
   - allows minimal implementation of locale-root
   - allows use of poll instead of epoll in event loop


  feature
   - compatibility to Zephyr OS

  fix
   - bug #7594
   - big RPC buffers
   - TLS for RPC

Version 5.3.7
-------------

  change
   - RPC transmit type's name of not predefined types
   - RPC handle correctly reception of incomplete buffers

Version 5.3.6
-------------

  change
   - serialize pushing events

Version 5.3.5
-------------

  change
   - use splitted librp-utils:
     librp-utils-core, librp-utils-file, librp-utils-json-c

Version 5.3.4
-------------

  fixes
   - improve conversion from stringz to json and json-c

  change
   - make libmagic optional

Version 5.3.3
-------------

  change
   - propagate maximum payload length of websockets

Version 5.3.2
-------------

  fixes
   - release event manager when sync_cb must wait

Version 5.3.1
-------------

  fixes
   - fix bug in initialisation of rpc sockets

Version 5.3.0
-------------

  change
   - full handling of SOCKSPEC query parameters

  features
   - RPC over mTLS

Version 5.2.1
-------------

  fixes
   - ensure that jobs posted with a delay are correctly delayed

Version 5.2.0
-------------

  major versions of libafb and libafbcli is now 6 because of broken API

  fixes
   - fix memory crash when broadcasting many events
   - fix unsubscribing with RPC transport
   - fix aligning in RPC encoder
   - enforce chunk size of RPC v3 to be multiple of 8 (padding)